ARR Stack/prowlarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: arr-stack
spec:
  selector:
    app: prowlarr
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
