ARR Stack/prowlarr/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: arr-stack
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.kbtech.org`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
